fix issue with hero image on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -57,10 +57,19 @@ nav img.logo {
     left: 0;
     right: 0;
     bottom: 0;
-    background: url("../images/shipleysautoworkz/1.png") no-repeat center bottom fixed;
+    background: url("../images/shipleysautoworkz/1.png") no-repeat center center;
     background-size: cover;
     z-index: -1;
 }
+
+@media screen and (min-width: 992px) {
+    .hero::before {
+        background: url("../images/shipleysautoworkz/1.png") no-repeat center bottom fixed;
+        background-size: cover;
+    }
+    
+}
+
 
 
 .hero h1 {
